fix pictures in homepage, fix jumping button in ui

--- a/GetPetWebApp/src/app/modules/home/components/index/index.component.sass
+++ b/GetPetWebApp/src/app/modules/home/components/index/index.component.sass
@@ -82,3 +82,12 @@ div > button:first-child
 
     .show
         opacity: 1
+
+.articles
+    margin-top: 0
+
+    @media (min-width: 576px)
+        margin-top: 300px
+
+    @media (min-width: 768px)
+        margin-top: 0
