--- a/GetPetWebApp/src/app/modules/pets/components/addpet/addpet.component.sass
+++ b/GetPetWebApp/src/app/modules/pets/components/addpet/addpet.component.sass
@@ -25,6 +25,11 @@
   justify-content: space-between
   width: 100%
 
+section
+  width: 100%
+  margin: 0
+  position: relative
+
 #name
   width: 200px
 
@@ -44,10 +49,10 @@
   padding: 10px
 
 .formContent
-  max-width: 60%
-  width: 100%
+  //max-width: 60%
+  width: 600px
   padding: 10px
-  border: 1px solid black
+  //border: 1px solid black
 
 ::ng-deep .next-button
   background-color: #e2ecfa
